<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >
    
     <TextView
        android:id="@+id/level_sequence_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_sequence_text"
        android:textSize="20sp" />
    
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/level_sequence_text_current_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_sequence_text_current_selection"
        android:textSize="20sp" />
    
    <EditText 
        android:id="@+id/level_sequence_current_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/level_sequence_text_current_selection_hint"
        android:inputType="text"
        android:textSize="20sp"
        />
    
    <TextView
        android:id="@+id/level_sequence_text_current_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_sequence_text_current_selection_position"
        android:textSize="20sp" />
    
    <EditText 
        android:id="@+id/level_sequence_current_selection_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/level_sequence_text_current_selection_position_hint"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        />
</LinearLayout>