<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <Button
        android:id="@+id/welcome_dialog_new_level_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_dialog_new_level_button_label" />

    <Button
        android:id="@+id/welcome_dialog_edit_level_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_dialog_edit_level_button_label" />

    <Button
        android:id="@+id/welcome_dialog_download_level_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_dialog_download_level_button_label" />

    <Button
        android:id="@+id/welcome_dialog_delete_level_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_dialog_delete_level_button_label" />

</LinearLayout>