<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:id="@+id/dialog_retrieve_level_fromlink_text_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retrieve_level_fromlink_dialog_text_link" />

    <EditText
        android:id="@+id/dialog_retrieve_level_fromlink_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/retrieve_level_fromlink_dialog_hint_link"
        android:inputType="textWebEditText"
        android:singleLine="true" />
    
        <Button 
        android:id="@+id/dialog_retrieve_level_fromlink_load_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retrieve_level_fromlink_dialog_load_button"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />

</LinearLayout>